--- a/resources.html
+++ b/resources.html
@@ -75,11 +75,40 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="section-heading">Resources</h1>
-			<p class="lead section-lead">Tools</p>
-			<p>Virtual Machines</p>
+			<p class="lead section-lead">Necessary Tools:</p>
 			<li>
-				<a href="http://24.20.206.102:8888/">Emergency VMs</a>
+				<a href="https://www.hex-rays.com/products/ida/support/download_demo.shtml">IDA Pro (Reversing)</a>
 			</li>
+			<li>
+                                <a href="https://portswigger.net/burp/download.html">Burp Suite (Network/Web)</a>
+                        </li>
+			 <li>
+                                <a href="https://www.wireshark.org/">WireShark (Network)</a>
+                        </li>
+			 <li>
+                                <a href="https://www.metasploit.com/">Metasploit (Exploit)</a>
+                        </li>
+			 <li>
+                                <a href="https://www.gnu.org/software/gdb/">gdb (Reversing/Exploit)</a>
+                        </li>
+			 <li>
+                                <a href="https://sourceware.org/binutils/docs/binutils/objdump.html">objdump (Reversing/Exploit)</a>
+                        </li>
+			<li>
+                                <a href="https://sourceware.org/binutils/docs/binutils/readelf.html">readelf (Reversing/Exploit)</a>
+                        </li>
+                         <li>
+                                <a href="http://lcamtuf.coredump.cx/afl/">AFL (Fuzzing/Exploit)</a>
+                        </li>
+                         <li>
+                                <a href="http://linux.die.net/man/1/nc">netcat (Network)</a>
+                        </li>
+                         <li>
+                                <a href="http://tools.kali.org/password-attacks/hydra">hydra (Network/Web)</a>
+                        </li>
+                         <li>
+                                <a href="http://linux.die.net/man/8/tcpdump">tcpdump (Network)</a>
+                        </li>
 			<p class="lead section-lead">Reverse Engineering</p>
 			<p>General</p>
 			<li>
