Added General Resources

--- a/resources.html
+++ b/resources.html
@@ -109,6 +109,16 @@
                          <li>
                                 <a href="http://linux.die.net/man/8/tcpdump">tcpdump (Network)</a>
                         </li>
+			<p class="lead section-lead">General Intro-Level Resources:</p>
+				<li>
+					<a href="https://trailofbits.github.io/ctf/index.html">Trail of Bits</a>
+				</li>
+				 <li>
+                                        <a href="https://www.linkedin.com/pulse/tools-resources-prepare-hacker-ctf-competition-mayur-agnihotri">CTF Toolkit</a>
+                                </li>
+				 <li>
+                                        <a href="https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Book: Hacking, The Art of Exploitation</a>
+                                </li>
 			<p class="lead section-lead">Reverse Engineering</p>
 			<p>General</p>
 			<li>
