--- a/resources.html
+++ b/resources.html
@@ -119,16 +119,30 @@
 				 <li>
                                         <a href="https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Book: Hacking, The Art of Exploitation</a>
                                 </li>
-			<p class="lead section-lead">Reverse Engineering</p>
-			<p>General</p>
-			<li>
-				<a href="http://opensecuritytraining.info/LifeOfBinaries.html">Open Security Training's Life of Binaries</a>
-			</li><br>
+			<p class="lead section-lead">Wargames:</p>
+				<li>
+					<a href="http://overthewire.org/wargames/">OverTheWire</a>
+				</li>
+				<li>
+					<a href="http://smashthestack.org/">SmashTheStack</a>
+				</li>
 
-			<p>x86</p>
-			<li>
-			<a href="http://opensecuritytraining.info/IntroX86.html">Open Security Training's Intro to x86</a>
-			</li>
+			<p class="lead section-lead">Reverse Engineering</p>
+				<p>Online Resources:</p>
+				<li>
+					<a href="http://opensecuritytraining.info/IntroX86.html">opensecuritytraining: Intro to x86 (part1)</a>
+				</li>
+				<li>
+					<a href="http://opensecuritytraining.info/IntermediateX86.html">opensecuritytraining: Into to x86 (part2)</a>
+				</li>
+				<li>
+					<a href="http://opensecuritytraining.info/LifeOfBinaries.html">opensecuritytraining: Life of Binaries</a>
+				</li>
+				<p>Books:</p>
+				<li>
+					<a href"https://www.amazon.com/Reversing-Secrets-Engineering-Eldad-Eilam/dp/0764574817">Reversing, The Secrets of Reverse Engineering</a>
+				</li>
+
                         <p class="lead section-lead">Exploit</p>
 
                         <p class="lead section-lead">Web</p>
