Added web resources

--- a/resources.html
+++ b/resources.html
@@ -171,6 +171,36 @@
 				</li>
 
                         <p class="lead section-lead">Web</p>
+				<p>Online Resources:</p>
+				<li>
+					<a href="https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)">OWASP: Cross-site Scripting (XSS)</a>
+				</li>
+				<li>
+                                        <a href="http://excess-xss.com/">Intro to XSS</a>
+                                </li>
+				<li>
+                                        <a href="https://www.owasp.org/index.php/Cross-Site_Request_Forgery_(CSRF)">OWASP: Cross-Site Request Forgery (CSRF)</a>
+                                </li>
+				<li>
+                                        <a href="https://www.owasp.org/index.php/Command_Injection">OWASP: Command Injection</a>
+                                </li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=chkFBigodIw">MIT OpenCourseWare: Web Security Model</a>
+				</li>
+				<li>
+                                        <a href="https://www.youtube.com/watch?v=EBQIGy1ROLY">MIT OpenCourseWare: Securing Web Apps</a>
+                                </li><br>
+				<p>Books:</p>
+				<li>
+					<a href="https://www.amazon.com/Web-Application-Hackers-Handbook-Exploiting/dp/1118026470">Web Application Hacker's Handbook</a>
+				</li><br>
+				<p>Practice:</p>
+				<li>
+					<a href="http://www.dvwa.co.uk/">Damn Vulnerable Web App (DVWA)</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=Zh7WCKVuz1c">How to Setup and Use DVWA on Kali Linux</a>
+				</li>
 
 			<p class="lead section-lead">Networking</p>
 
