Added Network Resources

--- a/resources.html
+++ b/resources.html
@@ -203,6 +203,22 @@
 				</li>
 
 			<p class="lead section-lead">Networking</p>
+				<p>Online Resources:</p>
+				<li>
+					<a href="http://www.interhack.net/pubs/network-security/">Intro to Network Security</a>
+				</li>
+				<li>
+                                        <a href="https://www.youtube.com/watch?v=QOtA76ga_fY">MIT OpenCourseWare: Protocols</a>
+                                </li>
+				<li>
+                                        <a href="https://www.youtube.com/watch?v=SIEVvk3NVuk">MIT OpenCourseWare: Net Sec</a>
+                                </li><br>
+				<p>Books:</p>
+				<li>
+                                        <a href="https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Hacking, The Art of Exploitation</a>
+                                </li>
+				<p>Relevant Chapter:</p>
+				<p>Networking 0x400</p><br>
 
                     	<p class="lead section-lead">Cryptography</p>
 			<li>
