Kind of added crypto resources

--- a/resources.html
+++ b/resources.html
@@ -220,27 +220,15 @@
 				<p>Relevant Chapter:</p>
 				<p>Networking 0x400</p><br>
 
-                    	<p class="lead section-lead">Cryptography</p>
-			<li>
-				<a href="https://docs.google.com/presentation/d/1FyNzgZZBmHd0yU65N2Q_jH8dPze5qWiC3Px-WlP7Y1k/edit?usp=sharing">Crypto Slides</a>
-			</li>
-			<li>
-				<a href="http://pki-tutorial.readthedocs.io/en/latest/simple/">Basic OpenSSL Tutorial</a>
-			</li>
-			<li>
-				<a href="https://drive.google.com/file/d/0B70zOCRREkXyYkFzaEozWmV5bU0/view?usp=sharing">Demo: Text file encryption with OpenSSL</a>
-			</li>
-			<li>
-				<a href="https://drive.google.com/folderview?id=0B70zOCRREkXyTjFLQVVqamRLZUE&usp=sharing">Diagrams: Courtesy of Will Branscomb</a>
-			</li><br>
+                    	<p class="lead section-lead">Crypto</p>
+				<p>Online Resources: *More to add to this section</p>
+				<li>
+					<a href="https://www.owasp.org/index.php/Guide_to_Cryptography">OWASP: Guide to Cryptography</a>
+				</li>
+				<li>
+					<a href="https://www.youtube.com/watch?v=iQsKdtjwtYI">Applied Crypto: How SSL/TLS works with HTTPS</a>
+				</li>
 			
-			<p>Encryption Tools</p>
-			<li>
-				<a href="https://diskcryptor.net/wiki/Main_Page">DiskCryptor</a>
-			</li>
-			<li>
-				<a href="https://support.mozilla.org/en-US/kb/digitally-signing-and-encrypting-messages">Thunderbird Email Encryption</a>
-			</li>
                 </div>
             </div>
         </div>
