Edited resources css

--- a/resources.html
+++ b/resources.html
@@ -128,7 +128,7 @@
 				</li>
 
 			<p class="lead section-lead">Reverse Engineering</p>
-				<p>Online Resources:</p>
+				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/IntroX86.html">opensecuritytraining: Intro to x86 (part1)</a>
 				</li>
@@ -137,26 +137,26 @@
 				</li>
 				<li>
 					<a href="http://opensecuritytraining.info/LifeOfBinaries.html">opensecuritytraining: Life of Binaries</a>
-				</li><br>
-				<p>Books:</p>
+				</li>
+				<p class="section-paragraph">Books:</p>
 				<li>
 					<a href"https://www.amazon.com/Reversing-Secrets-Engineering-Eldad-Eilam/dp/0764574817">Reversing, The Secrets of Reverse Engineering</a>
 				</li>
 
                         <p class="lead section-lead">Native Exploit</p>
-				<p>Online Resources:</p>
+				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/Exploits1.html">opensecuritytraining: Exploits1</a>
 				</li>
 				<li>
 					<a href="http://phrack.org/issues/49/14.html">Smashing the Stack for Fun and Profit</a>
 				</li><br>
-				<p>Books:</p>
+				<p class="section-paragraph">Books:</p>
 				<li>
 					<a href"https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Hacking, The Art of Exploitation</a>
 				</li>
-				<p>Relevant Chapters, Sections:<br>Exploitation 0x300<br>Shellcode 0x500<br>Countermeasures, Buffer Restrictions 0x690 - Randomized Stack Space 0x6c5<br> 
-				<p>Wargames:</p>
+				<p class="section-paragraph">Relevant Chapters, Sections:<br>Exploitation 0x300<br>Shellcode 0x500<br>Countermeasures, Buffer Restrictions 0x690 - Randomized Stack Space 0x6c5</p> 
+				<p class="section-paragraph">Wargames:</p>
 				<li>
 					<a href="http://smashthestack.org/">SmashTheStack (online)</a>
 				</li>
@@ -171,7 +171,7 @@
 				</li>
 
                         <p class="lead section-lead">Web</p>
-				<p>Online Resources:</p>
+				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)">OWASP: Cross-site Scripting (XSS)</a>
 				</li>
@@ -192,12 +192,12 @@
                                 </li>
 				<li>
 					<a href="https://www.youtube.com/watch?v=S2iBR2ZlZf0">MIT OpenCourseWare: SSL and HTTPS</a>
-				</li><br>
-				<p>Books:</p>
+				</li>
+				<p class="section-paragraph">Books:</p>
 				<li>
 					<a href="https://www.amazon.com/Web-Application-Hackers-Handbook-Exploiting/dp/1118026470">Web Application Hacker's Handbook</a>
-				</li><br>
-				<p>Practice:</p>
+				</li>
+				<p class="section-paragraph">Practice:</p>
 				<li>
 					<a href="http://www.dvwa.co.uk/">Damn Vulnerable Web App (DVWA)</a>
 				</li>
@@ -206,7 +206,7 @@
 				</li>
 
 			<p class="lead section-lead">Networking</p>
-				<p>Online Resources:</p>
+				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://www.interhack.net/pubs/network-security/">Intro to Network Security</a>
 				</li>
@@ -215,16 +215,16 @@
                                 </li>
 				<li>
                                         <a href="https://www.youtube.com/watch?v=SIEVvk3NVuk">MIT OpenCourseWare: Net Sec</a>
-                                </li><br>
-				<p>Books:</p>
+                                </li>
+				<p class="section-paragraph">Books:</p>
 				<li>
                                         <a href="https://drive.google.com/file/d/0Byq7N6G3uMfjWndrLVoxR3VmenM/view?usp=sharing">Hacking, The Art of Exploitation</a>
                                 </li>
 				<p>Relevant Chapter:</p>
-				<p>Networking 0x400</p><br>
+				<p>Networking 0x400</p>
 
                     	<p class="lead section-lead">Crypto</p>
-				<p>Online Resources: *More to add to this section</p>
+				<p class="section-paragraph">Online Resources: *More to add to this section</p>
 				<li>
 					<a href="https://www.owasp.org/index.php/Guide_to_Cryptography">OWASP: Guide to Cryptography</a>
 				</li>
