--- a/resources.html
+++ b/resources.html
@@ -128,6 +128,7 @@
 				</li>
 
 			<p class="lead section-lead">Reverse Engineering</p>
+				<p class="section-paragraph"><a href="topics-reversing.html">Here's a list of into topics you should know and research</a></p>
 				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/IntroX86.html">opensecuritytraining: Intro to x86 (part1)</a>
