--- a/resources.html
+++ b/resources.html
@@ -128,7 +128,7 @@
 				</li>
 
 			<p class="lead section-lead">Reverse Engineering</p>
-				<p class="section-paragraph"><a href="topics-reversing.html">Here's a list of into topics you should know and research</a></p>
+				<p class="section-paragraph"><a href="topics-reversing.html">** Topics to Research **</a></p>
 				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/IntroX86.html">opensecuritytraining: Intro to x86 (part1)</a>
@@ -145,7 +145,9 @@
 				</li>
 
                         <p class="lead section-lead">Native Exploit</p>
-				<p class="section-paragraph"><a href="topics-exploit.html">List of Topics to Know and Research</a></p>
+				<p class="section-paragraph"><i>"A program can only do what it's programmed to do, to the letter of the law.
+				Unfortunately, what's written doesn't always coincide with what the programmer intended the program to do" -Jon Erikson</i></p>
+				<p class="section-paragraph"><a href="topics-exploit.html">** Topics to Research **</a></p>
 				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="http://opensecuritytraining.info/Exploits1.html">opensecuritytraining: Exploits1</a>
