--- a/resources.html
+++ b/resources.html
@@ -175,6 +175,7 @@
 				</li>
 
                         <p class="lead section-lead">Web</p>
+				<p class="section-paragraph"><b><a href="topics-web.html">Topics To Research</a></b></p>
 				<p class="section-paragraph">Online Resources:</p>
 				<li>
 					<a href="https://www.owasp.org/index.php/Cross-site_Scripting_(XSS)">OWASP: Cross-site Scripting (XSS)</a>
