--- a/topics-web.html
+++ b/topics-web.html
@@ -74,10 +74,24 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="section-heading">Reverse Engineering</h1>
-			<p class="lead section-lead">Topics(x86):</p>
-			<p class="section-paragraph">UNIX Virtual Address Space:</p>
-				
+                    <h1 class="section-heading">Web</h1>
+			<p class="lead section-lead">Topics:</p>
+			<p class="lead section-lead">Cross-Site-Scripting (XSS):</p>
+			<p class="section-paragraph">Know the difference between the different types of XSS and their countermeasures.</p>
+			<li>Persistent (Stored)</li>
+			<li>Non-Persistent (Reflected)</li>
+			<li>DOM</li>
+			<p class="section-paragraph">Countermeasures:</p>
+			<li>Validation: (Whitelist vs Blacklist)</li>
+			<li>Encoding: (Context?)</li>
+			<li>HttpOnly Cookie Flag</li>
+
+			<p class="lead section-lead">Cross-Site Request Forgery (CSRF):</p>
+			<p class="section-paragraph">This one is pretty straight forward but can be difficult to properly deffend against.</p>
+			<p class="section-paragraph">Countermeasures:</p>
+			<li>Synchronized Token Pattern</li>
+			<li>Same Origin Policy</li>
+
                 </div>
             </div>
         </div>
