Added a lot of stuff. forgot to push for a while..

--- a/schedule.html
+++ b/schedule.html
@@ -75,10 +75,34 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="section-heading">Schedule</h1>
-                    <p class="lead section-lead">Week1</p>
-                    <p class="section-paragraph">Possibly make this section a grid layout or something more calander-esc</p>
-			<p class-"lead section-lead">Week2</p>
-			<p class="section-paragraph">Native!</p>
+			<p class="section-paragraph">Here is our tentative schedule for the term. As the term progresses, we will add slides and lecture material 
+						to this page in it's respective week.</p>
+                    	<p class="lead section-lead">Week 1:</p>
+				<li>Introduction/Overview</li>
+			<p class="lead section-lead">Week 2:</p>
+				<li>VM Setup with DVWA</li>
+				<li>Intro to Linux and basic memory corruption</li>
+			<p class="lead section-lead">Week 3:</p>
+				<li>Cross-Site Scripting and Encoding/Validation/Content Security Policy</li>
+				<li>Intro to reversing x86 and analyzing the Stack</li>
+			<p class="lead section-lead">Week 4:</p>
+				<li>Cross-Site Request Forgery and Synchronizer Token Pattern</li>
+				<li>Shellcode and Overwriting the Return Address</li>
+			<p class="lead section-lead">Week 5:</p>
+                                <li>SQL Injection</li>
+                                <li>Ret2Libc and Non-eXecutable Stack</li>
+			<p class="lead section-lead">Week 6:</p>
+                                <li>Session Pinning</li>
+                                <li>ROP and ASLR</li>
+			<p class="lead section-lead">Week 7:</p>
+                                <li>TBA</li>
+                                <li>Stack Canaries and String Format Vulnerabilities</li>
+			<p class="lead section-lead">Week 8:</p>
+                                <li>TBA</li>
+                                <li>Heap Overflows and Use-After-Free</li>
+			<p class="lead section-lead">Week 9:</p>
+                                <li>TBA</li>
+                                <li>TBA</li>
                 </div>
             </div>
         </div>
