--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="section-heading">Announcments</h1>
-                    <p class="lead section-lead">5/17/2016</p>
-                    <p class="section-paragraph">Def Con 2016 Qualifiers are this Saturday through Monday (May 21st - 23rd). Be sure to check it out!</p>
-			<a href="https://legitbs.net/">Register for Def Con Quals</a>
+                    <h1 class="section-heading">Announcements</h1>
+                    <p class="lead section-lead">Welcome Back Everyone!</p>
+                    <p class="section-paragraph"><li>09/21/16</li><br>Our first meeting is Tuesday (9/27) in the Deschutes Colloquium from 6pm to 7pm. This term's meeting format will be a bit different from previous years. Beginning with the 2nd meeting, we'll be doing 2 hour lectures (6pm to 8pm) divided into two parts. The 1st hour will be material related to web application security, and the 2nd hour will cover native software auditing/exploitation.</p>
                 </div>
             </div>
         </div>
@@ -93,8 +92,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="section-heading">Update Log</h1>
-                    <p class="lead section-lead">This section will keep a log of all recent site updates</p>
-                    <p class="section-paragraph">Such as: New write-up on DefCon CTF exploit challange posted by #Frank_The_Tank</p>
+                    <p class="lead section-lead">Checkout the new site!</p>
+                    <p class="section-paragraph"><li>We've started to compile a great list of resources on the <a href="resources.html">resources</a> tab. It's a work in progress but hopefully you will find it useful!<br>We've also put together a tentative lecture <a href="schedule.html">schedule</a>, but we will make an announcment if it changes.</p>
                 </div>
             </div>
             <!-- /.row -->
