its been a while

--- a/dvwa-xss.html
+++ b/dvwa-xss.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="SwampDonkey">
+    <meta name="author" content="">
 
     <title>UOSec</title>
 
@@ -15,7 +15,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/challenges.css" rel="stylesheet">
+    <link href="css/resources.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -46,7 +46,7 @@
                 <ul class="nav navbar-nav">
 			<li>
 				<a href="resources.html">Resources</a>
-			</li>
+			<li>
                     <li>
                         <a href="info.html">Info</a>
                     </li>
@@ -74,19 +74,54 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="section-heading">Challenges</h1>
-			<p class="section-paragraph">We are currently working on hosting Wargame challenges of our own to better match the curriculum structure.
-							Information about them will be posted here once they are ready. In the mean-time, I suggest sticking with
-							any Wargame sites referenced on the Resources page, or checking out 
-							<a href="https://ctftime.org/event/list/upcoming">CTFtime</a> for any upcoming CTFs</p>
+                    <h1 class="section-heading">Web</h1>
+			<p class="lead section-lead">Topics:</p>
+			<p class="lead section-lead">Cross-Site-Scripting (XSS):</p>
+			<p class="section-paragraph">Know the difference between the different types of XSS and how to defend against them.</p>
+			<li>Persistent (Stored)</li>
+			<li>Non-Persistent (Reflected)</li>
+			<li><a href="http://localhost/dvwa/vulnerabilities/xss_r/?name=and+thanks+for+the+cookie!%3Cscript%3Ealert%28document.cookie%29%3C%2Fscript%3E#">Try it!</a>
+			<li>DOM</li>
+			<p class="section-paragraph">Defense:</p>
+			<li>Validation: (Whitelist vs Blacklist)</li>
+			<li>Encoding: (Context?)</li>
+			<li>HttpOnly Cookie Flag</li>
+			<li>Content Security Policy (CSP)</li>
+
+			<p class="lead section-lead">Cross-Site Request Forgery (CSRF):</p>
+			<p class="section-paragraph">This attack is pretty straight forward but can be difficult to properly defend against.</p>
+			<p class="section-paragraph">Defense:</p>
+			<li>Synchronized Token Pattern</li>
+			<li>Same Origin Policy (How can XSS bypass this?)</li>
+
+			<p class="lead section-lead">SQL Injection (SQLi):</p>
+			<p class="section-paragraph">Though less common in modern functional interfaces, many PHP and ASP applications rely on older interfaces 
+			and can be subject to SQLi attacks. A successful SQLi attack can, in short, read, modify, and even execute admin level operations on database.
+			Know the two types of SQLi, means of prevention, and how to test for SQLi vulnerabilities:</p>
+			<li>Standard SQLi</li>
+			<li>Blind SQLi</li>
+			<p class="section-paragraph">Defense:</p>
+			<li>Validate Input (whitelist)</li>
+			<li>Escape User-Supplied Input</li>
+			<li>Prepared Statements with Parameterized Queries</li>
+			<li>Stored Procedures</li>
+
+			<p class="lead section-lead">Session Pinning (or Session Fixation):</p>
+			<p class="section-paragraph">Common attack techniques:</p>
+			<li>Session token in URL</li>
+			<li>Session token in hidden form field</li>
+			<li>Session ID in cookie</li>
+
+			<p class="lead section-lead">Others: (Don't assume these are less important)</p>
+			<li>Command Injection</li>
+			<li>Local File Inclusion (LFI)</li>
+			<li>Remote File Inclusion (RFI)</li>
+			<li>HTTP Strict Transport Security (HSTS)</li>
+
                 </div>
             </div>
         </div>
     </section>
-
-    <!-- Fixed Height Image Aside -->
-    <!-- Image backgrounds are set within the full-width-pics.css file. -->
-    <aside class="image-bg-fixed-height"></aside>
 
     <!-- Footer -->
     <footer>
