--- a/info.html
+++ b/info.html
@@ -83,13 +83,12 @@
 					knowledge to the test. Saturday's are also a great chance for you to come talk to us, ask questions, and work with us on keeping 
 					UOSec alive!</p>
 			<p class="lead section-lead">Contact:</p>
-			<p class="section-paragraph">Feel free to contact me if you would like to join our mailing list or have any questions. 
-				You can also contact me on Google Chat with my gmail address if you would rather. You will most likely get a quicker response.</p>
+			<p class="section-paragraph">Feel free to contact us if you would like to join our mailing list or have any questions.</p>
 			<li>
-				<p>Email: <a href="mailto:jbrodnax@uoregon.edu">jbrodnax@uoregon.edu</a></p>
+				<p>John Brodnax: <a href="mailto:admin@uosec.info">admin@uosec.info</a></p>
 			</li>
 			<li>
-				<p>Gmail: <a href="mailto:jbrodnax55@gmail.com">jbrodnax55@gmail.com</a></p>
+				<p>Cody Ebert: <a href="mailto:admin@uosec.info">peasant@uosec.info</a></p>
 			</li>
                 </div>
             </div>
