--- a/schedule.html
+++ b/schedule.html
@@ -79,29 +79,34 @@
 						to this page in it's respective week.</p>
                     	<p class="lead section-lead">Week 1:</p>
 				<li>Introduction/Overview</li>
+				<li><a href="https://docs.google.com/presentation/d/1O1tdOyRu9nzY9zc1Yd7TU8W_sRBeIr4ZvQcGcLhdkmI/edit?usp=sharing">Slides</a></li>
 			<p class="lead section-lead">Week 2:</p>
-				<li>VM Setup with DVWA</li>
+				<li>VM Setup with DVWA & Burp Suite</li>
 				<li>Intro to Linux and basic memory corruption</li>
 			<p class="lead section-lead">Week 3:</p>
-				<li>Cross-Site Scripting and Encoding/Validation/Content Security Policy</li>
+				<li>Intro to Website Technologies</li>
+				<li><a href="https://docs.google.com/presentation/d/1jXqz2q8lEbk28gMzNdtRPjhURNLDIzcCkB1cDjJNeq8/edit?usp=sharing">Slides</a></li>
 				<li>Intro to reversing x86 and analyzing the Stack</li>
+				<li><a href="https://docs.google.com/presentation/d/1DD76QIGoiph-1oZ8edgpDBNXeH4AmQR8sXImou7daFU/edit?usp=sharing">Slides</a></li>
 			<p class="lead section-lead">Week 4:</p>
-				<li>Cross-Site Request Forgery and Synchronizer Token Pattern</li>
+				<li>Cross-Site Scripting (Attack/Defense)</li>
+				<li><a href="https://drive.google.com/open?id=1Z7JiUKRiC_jSEzLAE1hjFPTusbwxGoGHNN8hvYZt2Ug">Slides</a></li>
 				<li>Shellcode and Overwriting the Return Address</li>
+				<li><a href="https://drive.google.com/open?id=1dHJwq9lhdeCH70iJzVsI7hWHjazk7Q9A5dcQ3E8BagQ">Slides</a></li>
 			<p class="lead section-lead">Week 5:</p>
-                                <li>SQL Injection</li>
+                                <li>Cross-Site Request Forgery and Encoding/Validation/Content Security Policy</li>
                                 <li>Ret2Libc and Non-eXecutable Stack</li>
 			<p class="lead section-lead">Week 6:</p>
-                                <li>Session Pinning</li>
+                                <li>SQL Injection & Command Injection</li>
                                 <li>ROP and ASLR</li>
 			<p class="lead section-lead">Week 7:</p>
-                                <li>TBA</li>
+                                <li>Intro to Android and Session Pinning</li>
                                 <li>Stack Canaries and String Format Vulnerabilities</li>
 			<p class="lead section-lead">Week 8:</p>
-                                <li>TBA</li>
+                                <li>Web Python Scripting</li>
                                 <li>Heap Overflows and Use-After-Free</li>
 			<p class="lead section-lead">Week 9:</p>
-                                <li>TBA</li>
+                                <li>Pentest a Web App</li>
                                 <li>TBA</li>
                 </div>
             </div>
