updated location on index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <div class="col-lg-12">
                     <h1 class="section-heading">Announcements</h1>
                     <p class="lead section-lead">Welcome Back Everyone!</p>
-                    <p class="section-paragraph"><li>09/21/16</li><br>Our first meeting is Tuesday (9/27) in the Deschutes Colloquium from 6pm to 7pm. This term's meeting format will be a bit different from previous years. Beginning with the 2nd meeting, we'll be doing 2 hour lectures (6pm to 8pm) divided into two parts. The 1st hour will be material related to web application security, and the 2nd hour will cover native software auditing/exploitation.</p>
+                    <p class="section-paragraph"><li>Last updated: 1/4/2017 </li><br>Our first meeting is Tuesday (1/10/2017). This term we will be meeting in Allen Hall 140.  The time of the meetings will remain the same as previous terms (6pm to 8pm, every Tuesday). This term's meeting format will be a bit different from previous terms. Beginning with the 2nd meeting, we will  be doing shorter lectures divided into parts. Instead of longer lectures like last term, we've decided to take  a more hands on approach, so bring your laptops! </p>
                 </div>
             </div>
         </div>
