--- a/stack-based-mem-corruption.html
+++ b/stack-based-mem-corruption.html
@@ -66,7 +66,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="section-heading">Stack-Based Memory Corruption</h1>
-                    <h2">Exploitation and Mitigation</h2><br>
+                    <h2>Exploitation and Mitigation</h2><br>
 
                     <p class="lead section-lead">Virtual Address Space (32 bit ELFs):</p>
                     <p class="section-lead">The Virtual Address Space (VAS) is divided up into several memory segments, each with their own purpose, organization, and permissions. From a high-level perspective, the following diagram depicts a single running process’s Address Space Layout:
@@ -82,9 +82,20 @@
                     <li><b>Kernel: </b>Space reserved for kernel execution</li>
                     <br>
                     <i>*Note: the kernel segment is referred to as Kernel-land, and all other segments are commonly referred to as User-land or User-space.</i>
-                    <br>
+                    <br><br>
                     The starting addresses of each segment listed in the diagram only serve as examples and do not pertain to every system. If you’re curious about the explicit segment starting addresses for a particular binary on a UNIX/Linux based system, you can throw the binary into GDB and examine its memory mappings with “info proc mappings”. </p>
                     <p>[INSERT IMG 2]</p>
+                    <p class="section-lead">The above image describes the VAS layout of a 32-bit ELF binary named call_instr. The row outlined in red describes the Code segment, and going down the list, yellow describes the Heap, green describes the shared libraries, and purple describes the Stack. If you’re unfamiliar with gdb, the steps to view a program’s VAS layout are as follows:
+                    <li>$gdb <_path/_to/_binary/_file></li>
+                    <li>$gdb break <some_function_name></li>
+                    <li>$gdb run</li>
+                    <li>$gdb info proc mappings</li>
+                    <br>
+                    This will start a gdb shell, set a breakpoint in the program (at whatever function you named), then run the program as a child process of gdb, and stop execution of the child once the breakpoint has been reached. Since the process is loaded in memory and its execution has paused, we can view its VAS layout with the gdb command <i>“info proc mappings”.</i> The source code for the binary used is shown below, and was compiled on a 64-bit system with <i>gcc -m32 -mpreferred-stack-boundary=2 <file_name.c> -o <prog_name>:</i></p>
+                    <p>[INSERT IMG 3]</p>
+
+                    <p class="lead section-lead">Stack Segment: </p>
+                    <p class="section-lead">The stack segment is as it’s name implies; a LIFO data structure where data is pushed and popped from a stack. Each element on the stack is a stack frame pertaining to an in-progress function. Within each stack frame, are sub-elements representing local variable data for that particular function as well as two saved pointer values:</p>
                 </div>
             </div>
         </div>
